# parallelized-pairwise-alignments

./: Cargo.toml  README.md
benches/: comparison.rs  fast_lsa.rs  long.txt  longlong.txt  medium.txt  parallel.rs  sequential.rs
src/: fast_lsa.rs  lib.rs  main.rs  parallel.rs  sequential.rs
