[package]
name = "pairwise"
version = "1.0.0"
edition = "2021"

[dependencies]
rayon = "1.6.0"

[dev-dependencies]
criterion = {version = "0.4.0", features = ["html_reports"]}
pprof = { version = "0.11", features = ["flamegraph", "criterion", "frame-pointer"] }

[[bench]]
name = "sequential"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "fast_lsa"
harness = false

[[bench]]
name = "comparison"
harness = false

[profile.release]
debug = true